<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.tree-sitter</groupId>
  <artifactId>jtreesitter-zenc</artifactId>
  <name>JTreeSitter ZenC</name>
  <version>0.1.0</version>
  <description>Tree-sitter grammar for Zen-C</description>
  <url>https://codeberg.org/wreedb/tree-sitter-zenc</url>
  <licenses>
    <license>
      <name>LGPL-3.0-or-later</name>
      <url>https://spdx.org/licenses/LGPL-3.0-or-later.html</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Will Reed</name>
      <email>wreed@disroot.org</email>
      <url>https://wreedb.github.io</url>
    </developer>
  </developers>
  <scm>
    <url>https://codeberg.org/wreedb/tree-sitter-zenc</url>
    <connection>scm:git:git://codeberg.org/wreedb/tree-sitter-zenc.git</connection>
    <developerConnection>scm:git:ssh://codeberg.org/wreedb/tree-sitter-zenc.git</developerConnection>
  </scm>
  <properties>
    <maven.compiler.release>23</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.deploy.skip>true</maven.deploy.skip>
    <gpg.skip>true</gpg.skip>
    <publish.auto>false</publish.auto>
    <publish.skip>true</publish.skip>
  </properties>
  <dependencies>
    <dependency>
      <groupId>io.github.tree-sitter</groupId>
      <artifactId>jtreesitter</artifactId>
      <version>0.26.0</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>6.0.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <sourceDirectory>bindings/java/main</sourceDirectory>
    <testSourceDirectory>bindings/java/test</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
        <configuration>
          <reportsDirectory>
            ${project.build.directory}/reports/surefire
          </reportsDirectory>
          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <show>public</show>
          <nohelp>true</nohelp>
          <noqualifier>true</noqualifier>
          <doclint>all,-missing</doclint>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.2.8</version>
        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
            <configuration>
              <bestPractices>true</bestPractices>
              <gpgArguments>
                <arg>--no-tty</arg>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.github.mavenplugins</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>1.1.1</version>
        <executions>
          <execution>
            <phase>deploy</phase>
            <goals>
              <goal>publish</goal>
            </goals>
            <configuration>
              <waitUntil>validated</waitUntil>
              <autoPublish>${publish.auto}</autoPublish>
              <skipPublishing>${publish.skip}</skipPublishing>
              <outputFilename>${project.artifactId}-${project.version}.zip</outputFilename>
              <deploymentName>${project.artifactId}-${project.version}.zip</deploymentName>
            </configuration>
          </execution>
        </executions>
        <extensions>true</extensions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>ci</id>
      <activation>
        <property>
          <name>env.CI</name>
          <value>true</value>
        </property>
      </activation>
      <properties>
        <gpg.skip>false</gpg.skip>
        <publish.auto>true</publish.auto>
        <publish.skip>false</publish.skip>
      </properties>
    </profile>
  </profiles>
</project>
